# ce22-pcu-grundlagen-der-programmierung

./: .gitignore
2025-10-09/: main.cpp
2025-10-23/: main.cpp
archiver/: CMakeLists.txt  build.sh  main.cpp
archiver/include/: actions.hpp  cli.hpp  filesystem.hpp  help.hpp  operation.hpp  program.hpp  state.hpp  states.hpp
archiver/src/: actions.cpp  cli.cpp  filesystem.cpp  help.cpp  main.cpp  operation.cpp  state.cpp  states.cpp
convert-int-to-float/: main.cpp
hello-world/: main.cpp
hello-world/src/: main.cpp
